prueba de subida de gitignore

--- a/src/.env
+++ b/src/.env
@@ -1,6 +1,8 @@
 #PRODUCCION
 DB_DRIVER=mysql
-APIKEY=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
+#APIKEY=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
+#APIKEY=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
+APIKEY=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
 #DB_HOST=www.masalojamientos.com
 #DB_NAME=miembro_12_
 #DB_USER=santi
